--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.4.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
